--- a/collection.html
+++ b/collection.html
@@ -53,47 +53,47 @@
         </form>
         <div class="products" id="product">
             <div class="product-box">
-                <img src="img/collection/blackshirt.jpg" alt="">
+                <img src="blackshirt.jpg" alt="">
                 <p>Black Shirt</p>
             </div>
             <div class="product-box">
-                <img src="img/collection/weddingsaree.jpg" alt="">
+                <img src="weddingsaree.jpg" alt="">
                 <p>wedding Saree</p>
             </div>
             <div class="product-box">
-                <img src="img/collection/geanpant.jpg" alt="">
+                <img src="geanpant.jpg" alt="">
                 <p>Blue Gean pant</p>
             </div>
             <div class="product-box">
-                <img src="img/collection/girlscombo.jpg" alt="">
+                <img src="girlscombo.jpg" alt="">
                 <p>Chudi Combo</p>
             </div>
             <div class="product-box">
-                <img src="img/collection/skybluesaree.jpg" alt="">
+                <img src="skybluesaree.jpg" alt="">
                 <p>Blue Saree</p>
             </div>
             <div class="product-box">
-                <img src="img/collection/pinkshirt.jpg" alt="">
+                <img src="pinkshirt.jpg" alt="">
                 <p>Pink Shirt</p>
             </div>
             <div class="product-box">
-                <img src="img/collection/yellowshirt.jpg" alt="">
+                <img src="yellowshirt.jpg" alt="">
                 <p>yellow Shirt</p>
             </div>
             <div class="product-box">
-                <img src="img/collection/pinkkurti.jpg" alt="">
+                <img src="pinkkurti.jpg" alt="">
                 <p>Pink Kurti</p>
             </div>
             <div class="product-box">
-                <img src="img/collection/yellowchudi.jpg" alt="">
+                <img src="yellowchudi.jpg" alt="">
                 <p>Yellow Chudi</p>
             </div>
             <div class="product-box">
-                <img src="img/collection/pinkchudi.jpg" alt="">
+                <img src="pinkchudi.jpg" alt="">
                 <p>Pink Chudi</p>
             </div>
             <div class="product-box">
-                <img src="img/collection/whiteshirt.jpg" alt="">
+                <img src="whiteshirt.jpg" alt="">
                 <p>white Shirt</p>
             </div>
         </div>
