--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div>
-            <img class="header-image" src="img/fashion1.jpg " alt="">
+            <img class="header-image" src="fashion1.jpg " alt="">
         </div>
     </div>
     <!-- Service Section-->
@@ -90,38 +90,38 @@
     <h2 style="padding: 20px;">New Arrival</h2>
     <div class="new-arrival">
         <div class="new-arrival-container">
-            <img src="img/fashion3.jpg" alt="">
+            <img src="fashion3.jpg" alt="">
             <button>Shop Now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="new-arrival-container">
-            <img src="img/fashion2.jpg" alt="">
+            <img src="fashion2.jpg" alt="">
             <button>Shop Now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="new-arrival-container">
-            <img src="img/fashion5.jpg" alt="">
+            <img src="fashion5.jpg" alt="">
             <button>Shop Now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="new-arrival-container">
-            <img src="img/fashion4.jpg" alt="">
+            <img src="fashion4.jpg" alt="">
             <button>Shop Now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
     </div>
     <h2 style="padding: 20px;">Most Wanted</h2>
     <div class="new-arrival">
         <div class="new-arrival-container">
-            <img src="img/fashion8.jpg" alt="">
+            <img src="fashion8.jpg" alt="">
             <button>Shop Now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="new-arrival-container">
-            <img src="img/fashion7.jpg" alt="">
+            <img src="fashion7.jpg" alt="">
             <button>Shop Now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="new-arrival-container">
-            <img src="img/fashion9.jpg" alt="">
+            <img src="fashion9.jpg" alt="">
             <button>Shop Now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="new-arrival-container">
-            <img src="img/fashion6.jpg" alt="">
+            <img src="fashion6.jpg" alt="">
             <button>Shop Now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
     </div>
